add repos_csv file to store repos name
Put or save the full repos name, its data will be fetched here or list
repos names.

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,7 @@
 /.env
 /.vscode
 /src/__pycache__
-/data/raw/*
-/data/processed/*
-/data/final/*
+/data/*
 /src/outputs/*
 /outputs/*
 /repos_his.log
